src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Teacher_recommendation_letter__c</fullName>
        <inlineHelpText>After you submit the name and email address of the teacher or counselor who will provide your recommendation letter, we will send a request via email. When we receive the recommendation this field will be updated to &quot;Received.&quot;</inlineHelpText>
        <label>Teacher Recommendation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tentative_Registrants__c</fullName>
        <inlineHelpText>Number of delegates that have been tentatively registered, but not submitted.</inlineHelpText>
        <label>Tentative Registrants</label>
        <summaryForeignKey>TentRegistrant__c.Group_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that user selected &quot;I agree&quot; to the Terms and Conditions.</description>
        <label>Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Credits__c</fullName>
        <description>The total amount credited to the last credit date for this order&apos;s invoice.  These credits are from credit memos.</description>
        <inlineHelpText>The total amount credited to the last credit date for this order&apos;s invoice.  These credits are from credit memos.</inlineHelpText>
        <label>Total Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <description>The total amount paid to the last payment date for this order&apos;s invoice.</description>
        <inlineHelpText>The total amount paid to the last payment date for this order&apos;s invoice.</inlineHelpText>
        <label>Total Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transcript_Status__c</fullName>
        <inlineHelpText>If a transcript is required but has not yet been received, this field will show &quot;Requested.&quot;  Please send transcripts to the Junior Statesmen office address shown in the brochure or the Application Instructions on the left.</inlineHelpText>
        <label>Transcript Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contact your school to submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel Extension</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Travel Extension)</relationshipLabel>
        <relationshipName>TravelOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Record_Count__c</fullName>
        <inlineHelpText>Number of Travel Records that have been added to this opportunity (should be 0 or 1).</inlineHelpText>
        <label>Travel Record Count</label>
        <summaryForeignKey>Travel_Record__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Urban_Target__c</fullName>
        <formula>IF(ocHigh_School__r.Account__r.Urban_Target__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Is the Account of the host chapter high school marked as Urban Target?</inlineHelpText>
        <label>Urban Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>make_a_payment__c</fullName>
        <description>Alternate payment link if Intuit link does not work</description>
        <label>Make A Payment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ocAdditional_Teacher_Advisors_Twin__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Additional Teacher/Advisors who will share a room (for cases where there is more than one T/A per 19 students).</inlineHelpText>
        <label>Additional Teacher/Advisors w/ Twin Room</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ocDelegation_Data_Complete__c</fullName>
        <formula>IF (OR ( ocStudent_Delegation_Leader__c &lt;&gt;&quot;&quot;,  ocTeacher_Advisor__c &lt;&gt;&quot;&quot;),&quot;True&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Simply fill in the delegation leaders for contact purposes: one Teacher/Advisor and one chapter officer (usually the Chapter President).  Call or email the JSA office if your Teacher/Advisor does not appear on the pull-down list.</inlineHelpText>
        <label>Delegation Data Complete?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ocHigh_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>High School Chapter that is sending a delegation (applies only to group opportunities).</inlineHelpText>
        <label>Host Chapter</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>Overnight Conventions</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ocStudent_Delegation_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Chapter President, or other student leader of the delegation.</inlineHelpText>
        <label>Student Delegation Leader</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Conventions Led by this Student</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ocStudents__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Estimated number of Junior State members who will attend as part of the delegation.</inlineHelpText>
        <label>Estimated Student Delegates</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ocTeacher_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The primary Teacher/Advisor attending the convention with the delegation. If the attending chaperon is not in the list, contact the nearest JSA office to have your chaperon added to the list.</inlineHelpText>
        <label>Primary Attending Teacher or Chaperon</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Conventions Led by this Teacher/Advisor</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ocTeacher_Advisors_Twin__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Estimated number of T/As and chaperones who will attend.</inlineHelpText>
        <label>Estimated Adult Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Balance__c</fullName>
        <description>Total Amount - Payments Made</description>
        <formula>MAX(NULLVALUE(pymt__Total_Amount__c,0) - NULLVALUE(pymt__Payments_Made__c,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount - Payments Made</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Frequency__c</fullName>
        <inlineHelpText>Recurring payments frequency</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Number_of_Payments_Made__c</fullName>
        <inlineHelpText>Total number of settled or completed payments related to this opportunity. Updated automatically when a payment record is added, updated or removed.</inlineHelpText>
        <label>Number of Payments Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Occurrences__c</fullName>
        <inlineHelpText>Number of recurring payment occurrences.</inlineHelpText>
        <label>Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__PO_Number__c</fullName>
        <description>Purchase order number.  Used when generating PaymentConnect invoices.</description>
        <inlineHelpText>Purchase order number.  Used when generating PaymentConnect invoices.</inlineHelpText>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Paid_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked by PaymentConnect when payments equal or exceed the opportunity amount (if &gt;0).</inlineHelpText>
        <label>Paid Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Payments_Made__c</fullName>
        <inlineHelpText>Total of settled payments related to this opportunity. This field is updated automatically when a payment record is added, updated or removed.</inlineHelpText>
        <label>Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Period__c</fullName>
        <inlineHelpText>Recurring payments period.</inlineHelpText>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SemiMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pymt__Recurring_Amount__c</fullName>
        <label>Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Shipping__c</fullName>
        <inlineHelpText>PaymentConnect Shipping Amount</inlineHelpText>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__SiteQuote_Expiration__c</fullName>
        <inlineHelpText>Date that the web-accessible quote on this opportunity expires.  Leave blank to disable the site quote entirely.</inlineHelpText>
        <label>SiteQuote Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__SiteQuote_Recurring_Setup__c</fullName>
        <inlineHelpText>Controls the way recurring payments are set up on the SiteQuote page.</inlineHelpText>
        <label>SiteQuote Recurring Setup</label>
        <picklist>
            <picklistValues>
                <fullName>Total Amount + Recurring Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Payments = Total Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Amount Includes First Recurring Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pymt__Subscription_Start_Date__c</fullName>
        <inlineHelpText>Date to start recurring or subscription payments</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Tax__c</fullName>
        <inlineHelpText>PaymentConnect tax amount</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Total_Amount__c</fullName>
        <formula>Amount +  pymt__Shipping__c +  pymt__Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PaymentConnect total calculated amount (Opportunity amount + shipping + tax)</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>symAcademic_Acheivements__c</fullName>
        <inlineHelpText>Highlight your academic achievements. For example, you can list awards, recognition, or a favorite course you have taken. Please limit your answer to 100 words or less.</inlineHelpText>
        <label>Academic Achievements</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>symLeadership_Positions__c</fullName>
        <inlineHelpText>List any leadership positions you have held. If you have not held any leadership roles you can list relevant clubs or extracurricular activities. Please limit your answer to 100 words or less.</inlineHelpText>
        <label>Leadership Positions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>symMost_Important_Issue__c</fullName>
        <inlineHelpText>Describe an important issue facing government and your proposed solution. Alternatively, tell us an issue you would like to discuss or debate at the symposium. Please limit your answer to 100 words or less.</inlineHelpText>
        <label>Most Important Issue/Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>JSA_Scholar_Code__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Summer_School</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Primary_Contact__c</columns>
        <columns>How_did_you_learn_about_us__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>Summer School</value>
        </filters>
        <label>All Summer School</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>NC_Fall_State_Chapters</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ocStudent_Delegation_Leader__c</columns>
        <columns>ocTeacher_Advisor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.ChapterConventionRegistration</value>
        </filters>
        <filters>
            <field>Convention__c</field>
            <operation>equals</operation>
            <value>Northern California</value>
        </filters>
        <label>NC Fall State Chapters</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Student_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_Today</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Today</label>
    </listViews>
    <listViews>
        <fullName>OpportunityHistory</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Opportunity History</label>
    </listViews>
    <listViews>
        <fullName>PendingOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Pending Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>ChapterConventionRegistration</fullName>
        <active>true</active>
        <businessProcess>Overnight Conventions</businessProcess>
        <description>Use this record type for schools that are coming to overnight conventions</description>
        <label>Chapter Convention Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chapter_Student_Subsidy</fullName>
        <active>true</active>
        <businessProcess>Donations</businessProcess>
        <description>Used for payments from summer partners and donations on behalf of chapters</description>
        <label>Chapter/Student Subsidy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conference</fullName>
        <active>true</active>
        <businessProcess>Ticketed Event</businessProcess>
        <description>Use this record type for conferences, such as Montezuma, or JSA cabinet retreats.</description>
        <label>Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Development</fullName>
        <active>true</active>
        <businessProcess>Donations</businessProcess>
        <description>Use this record type for development contributions</description>
        <label>Development</label>
    </recordTypes>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>false</active>
        <businessProcess>Donations</businessProcess>
        <description>This record type is inactive.  Use DEV instead.</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <description>Use this record type for grant applications</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Historical_Import</fullName>
        <active>true</active>
        <businessProcess>Historical Import</businessProcess>
        <description>Use this record type for importing/entering historical event attendance info (prior to 2009).</description>
        <label>Historical Import Summer Programs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Convention_Registration</fullName>
        <active>true</active>
        <businessProcess>Overnight Conventions</businessProcess>
        <description>Use this record type for individuals registering for a convention (even as part of a group)</description>
        <label>Individual Convention Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>MajorGift</fullName>
        <active>false</active>
        <businessProcess>Major Gift</businessProcess>
        <description>Use this record type for major gift initiatives</description>
        <label>MajorGift</label>
    </recordTypes>
    <recordTypes>
        <fullName>MatchingDonation</fullName>
        <active>false</active>
        <businessProcess>Donations</businessProcess>
        <description>Use this record type for matching donations</description>
        <label>Matching Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Donations</businessProcess>
        <description>Use this record type for memberships</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>NSF_Invoice</fullName>
        <active>true</active>
        <businessProcess>Ticketed Event</businessProcess>
        <description>Use this record type to re-invoice for NSF checks.</description>
        <label>NSF Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>SummerProgramRegistration</fullName>
        <active>true</active>
        <businessProcess>Summer Program</businessProcess>
        <description>Use this record type for summer program registrations</description>
        <label>Summer School Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Symposium_Registration</fullName>
        <active>true</active>
        <businessProcess>Summer Program</businessProcess>
        <description>Use this record type for symposia registrations</description>
        <label>Symposium Registration</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Inactive_Account_No_Orders</fullName>
        <active>false</active>
        <description>Inactive accounts can not have orders that go to QuickBooks</description>
        <errorConditionFormula>and(not( Account.Active__c  ),
or( ISPICKVAL(StageName, &apos;Closed Won&apos;),
ISPICKVAL(StageName,&apos;Posted&apos;),
ISPICKVAL(StageName,&apos;Grant Awarded&apos;),
ISPICKVAL(StageName,&apos;Ask - Accepted&apos;)))</errorConditionFormula>
        <errorMessage>An inactive account cannot have opportunities that are in a stage that sends them to QuickBooks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Accept_if_Grad_Yr_Null</fullName>
        <active>false</active>
        <description>Do not allow Stage to be set to Accepted if Grad Yr. of Contact is not set (currently only applied to Summer School Registration record types).</description>
        <errorConditionFormula>AND(  $RecordType.Name=&quot;Summer School Registration&quot;,  Primary_Contact__r.High_School_Graduation_Year__c=&quot;&quot;)</errorConditionFormula>
        <errorMessage>Students cannot be accepted to programs if they have not yet set Graduation Year.  Check Graduation Year and JSA Role on the Primary Contact record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Campus_Session_Change_if_Accepted</fullName>
        <active>true</active>
        <description>Prevent changes to Campus/Session after Accepted.  Instead clone oppty.</description>
        <errorConditionFormula>AND(IsWon,
    ISCHANGED( Campus_Session__c ) 
   )</errorConditionFormula>
        <errorMessage>The Campus/Session field cannot be changed after the Opportunity is Accepted.  Please clone the Oppty, cancel the current one, then make sure all the information on the new oppty is correct.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_total_change_if_invoiced</fullName>
        <active>false</active>
        <description>Only opportunities that do not have an invoice in QuickBooks can be changed in a manner that changes their total</description>
        <errorConditionFormula>and(Invoice_Count__c &gt; 0,
PRIORVALUE(Amount ) &lt;&gt; Amount )</errorConditionFormula>
        <errorMessage>Cannot change an opportunity if it has been invoiced.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OLD_No_change_if_invoiced</fullName>
        <active>false</active>
        <description>Only opportunities that do not have an invoice in QuickBooks can be changed.</description>
        <errorConditionFormula>OR(and(Invoice_Count__c &gt; 0,
PRIORVALUE(Invoice_Count__c) = Invoice_Count__c),
and(len(Invoice_Number__c ) &lt;&gt; 0,
PRIORVALUE(Invoice_Number__c) = Invoice_Number__c,
or(PRIORVALUE(Sales_Tax__c) = Sales_Tax__c,
isnull(PRIORVALUE(Sales_Tax__c)) = isnull(Sales_Tax__c)),
or(PRIORVALUE(Last_Payment_Date__c) = Last_Payment_Date__c,
isnull(PRIORVALUE(Last_Payment_Date__c)) = isnull(Last_Payment_Date__c)),
or(PRIORVALUE(Total_Payments__c) = Total_Payments__c,
isnull(PRIORVALUE(Total_Payments__c)) = isnull(Total_Payments__c)),
or(PRIORVALUE(Last_Credit_Date__c) = Last_Credit_Date__c,
isnull(PRIORVALUE(Last_Credit_Date__c)) = isnull(Last_Credit_Date__c)),
or(PRIORVALUE(Total_Credits__c) =  Total_Credits__c,
isnull(PRIORVALUE(Total_Credits__c)) = isnull(Total_Credits__c))
))</errorConditionFormula>
        <errorMessage>Cannot change an opportunity if it has been invoiced.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>no_invoice_change_after_QB</fullName>
        <active>false</active>
        <description>No change can be made to whether an opportunity is an invoice or a sales order after it has been sent to QuickBooks.</description>
        <errorConditionFormula>and(QuickBooks__c = true,
PRIORVALUE( Invoice__c ) &lt;&gt;  Invoice__c )</errorConditionFormula>
        <errorMessage>Cannot change what an opportunity will be in QuickBooks after it has been sent to QuickBooks.</errorMessage>
    </validationRules>
</CustomObject>